--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.adorno-contenedor{
+    height: 10px;
+    width: 100%;
+    background-color: #0DCAF0;
+}
+
 /*Icono*/
 .contenedor-icono {
     font-size: 17.15px;
@@ -17,13 +23,8 @@
 .contenedor-footer{
     height: 290px;
     width: 100vw;
-    background-color: antiquewhite;
 }
-.adorno-superior-footer{
-    height: 10px;
-    width: 100%;
-    background-color: #0DCAF0;
-}
+
 .informacion-footer{
     height: 225px;
     width: 100%;
@@ -31,6 +32,7 @@
     color: white;
     padding: 25px 50px 30px 50px;
 }
+
 .redes-sociales{
     display: flex;
     padding: 0px 15px;
@@ -49,14 +51,15 @@
     height: 210px;
     padding: 0px 15px;
 }
+
 span{
     height: 27px;
     width: 825px;
     color: #FFFFFF;
     padding: 0px 15px;
-    font-size: 18px;
-    
+    font-size: 18px;    
 }
+
 .container-general{
     height: 210px;
     width: 80%;
@@ -80,4 +83,37 @@ span{
 
 .contenedor-ancla a:hover{
     text-decoration:underline;
+}
+
+/*Header*/
+.contenedor-header{
+    width: 100vw;
+}
+
+
+.header-gris{
+    background-color: #D8D8D8;
+    width: 100%;
+    height: 51.521px;
+}
+
+.contenedor-informacion-contacto{
+    height: 31.521px;
+    width: 260px;
+    padding: 10px;
+    float: right;
+    margin: 0px 100px;
+}
+
+
+.contenedor-info{
+    display: flex;
+    width: 50%;
+}
+
+.contenedor-flex{
+    display: flex;
+}
+.especificacion-icono{
+    margin: 0px 5px;
 }
