--- a/styles.css
+++ b/styles.css
@@ -177,3 +177,65 @@ span{
     width: 0px;
 
 }
+
+/*Card*/
+.contenedor-card{
+    width: 200px;
+    height: 315px;
+    padding: 20px 15px;
+    padding-bottom: 0px
+}
+
+.card-imagen{
+    height: 200px;
+    width: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card-body{
+    height: 75px;
+    width: 160px;
+    padding: 20px;
+}
+
+.dia-evento{
+    height: 27px;
+    width: 160px;
+}
+
+.fondo-dia-evento{
+    background-color: #004a98;
+    height: auto;
+    width: auto;
+    padding: 10px;
+}
+.titulo-evento{
+    margin-top: 10px;
+    height: 54px;
+    width: 160px;
+    font-size: 18px;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    white-space: nowrap;
+}
+.boton-conocer-mas{
+    height: 30px;
+    width: 142px;
+    padding: 5px 20px;
+    border: 1.33px;
+    background-color: #2080CB;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    color: white;
+    font-weight:600;
+    font-size: 20px;
+}
+.titulo-eventos{
+    text-align: center;
+    color: #004a98;
+}
+h2{
+    font-size: 45px;
+}
