--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    margin: auto;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -140,7 +141,7 @@ span{
     height: 120px;
     width: 837px;
     padding: 0px 15px;
-    justify-content: center; /* Centramos horizontalmente */
+    justify-content: center; 
     align-items: center;
     margin-left: 100px;
 }
@@ -150,7 +151,7 @@ span{
     width: 422.021px;
     padding: 0px 15px;
     display: flex;
-    justify-content: center; /* Centramos horizontalmente */
+    justify-content: center; /
     align-items: center;
     margin-left: 54px;
 }
@@ -197,6 +198,7 @@ span{
     height: 75px;
     width: 160px;
     padding: 20px;
+    background-color: #FFFFFF;
 }
 
 .dia-evento{
