--- a/styles/global.css
+++ b/styles/global.css
@@ -15,3 +15,12 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
   
+body{
+  overflow-x: hidden;
+}
+
+.adorno-contenedor{
+  height: 10px;
+  width: 100%;
+  background-color: var(--accent-color);
+}
