--- a/styles/component.css
+++ b/styles/component.css
@@ -38,6 +38,7 @@
     display: flex;
     align-items: center;
     white-space: nowrap;
+    cursor: pointer;
 }
 
 .contenedor-item-dropdown:hover{
@@ -57,10 +58,8 @@
     align-items: center;
     border-radius: 5px;
     padding: 0px 10px;
+    cursor: pointer;
 }
-
-
-
 
 .contenedor-option-dropdown:hover {
     background-color: var(--primary-color);
@@ -82,7 +81,6 @@
     background-color: var(--secondary-color);
     border: 1px solid var(--detail-color);
     border-radius: 5px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .contenedor-items.show {
@@ -99,7 +97,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 20px;
-    color: white;
+    color: var(--secondary-color);
     font-weight:600;
     font-size: 20px;
     cursor: pointer;
@@ -185,11 +183,12 @@ h2{
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .contenedor-option-simple:hover{
     background-color:var(--primary-color);
-    color: white;
+    color: var(--secondary-color);
 }
 
 .contenedor-option-simple a{
@@ -198,4 +197,19 @@ h2{
     width: auto;
     font-size: 20px;
     font-weight:600;
+}
+
+/*Breadcrumb-item*/
+.contenedor-breadcrumb {
+    background-color: var(--detail-color);
+    height: 20px;
+    color: var(--button-color-primary);
+    font-size: 12.75px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.contenedor-breadcrumb i{
+    padding: 0px 7.55px;
+    font-size: 19px;
 }
